# dm-rust

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  MOCK_README.md  config-qn-smart-plc.json  config.example.json  config.example.toml  config.hs_power_sequencer.json  config.integration.toml  config.minimal.json  config.mock.json  config.novastar.json  config_computer_control.json  config_splicer3d.json  config_xfusion.json  simulators.json  sqlite.db  test_lrc.py
config/: config copy.json  config.classroom.json  config.mock.json  config.modbus_types.json  config.novastar.json  config.pdu.json  config.qn-smart-plc.json  config.service.json  config.test.json  config.wdy8en.json  config1.json  templates.json
config-ui/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
deploy/: README.md  dm-rust-configmap.yaml  dm-rust-deployment.yaml  dm-rust-pvc.yaml  dm-rust-service.yaml  kustomization.yaml  mysql-configmap.yaml  mysql-deployment.yaml  mysql-secret.yaml  mysql-service.yaml
dist-config/: index.html
doc/: ARCHITECTURE.md  BATCH_READ_API.md  BATCH_READ_QUICK_REF.md  BATCH_READ_SUMMARY.md  COMPUTER_CONTROL_USAGE.md  CONFIGURATION.md  CUSTOM_METHODS_GUIDE.md  DATABASE_API.md  DEVICE_API.md  FILE_API.md  HS_API_QUICK_REF.md  HS_HTTP_EXAMPLES.md  HS_POWER_SEQUENCER_GUIDE.md  HS_SERIAL_CONFIG.md  HS_SUMMARY.md  HTTP_API.md  LOG_CONFIG.md  LSPC_API.md  MIGRATION_WEBSOCKET_TO_HTTP.md  MOCK_PROTOCOL_GUIDE.md  MODBUS_AUTO_CALL.md  MODBUS_DATA_TYPES.md  MODBUS_QUICK_REF.md  MODBUS_USAGE.md  NOVASTAR_GUIDE.md  PLANNING.md  PROTOCOL_MAPPING.md  QUICKSTART.md  README.md  RESOURCE_API.md  SCENE_EXECUTOR.md  SERVICE_DEBUGGING.md  SPLICER_3D_USAGE.md  SWAGGER_USAGE.md  TCP_SIMULATOR_GUIDE.md  TPRIS_PDU_USAGE.md  WDY_8EN_USAGE.md  WINDOWS_SERVICE.md  XFUSION_USAGE.md  database.sql
examples/: batch_read_demo.py  batch_read_example.js  modbus_types_demo.py
migrations/: add_fixed_to_screen.sql
script/: build-windows.bat  build-windows.sh  (+1 more)
simulator/: Cargo.toml  mqtt_simulators.toml  simulators.json  templates.json
simulator/src/: lib.rs  main.rs
simulator/src/mqtt/: broker.rs  manager.rs  mod.rs  persistence.rs  proxy.rs  state.rs
simulator/src/tcp/: handler.rs  manager.rs  persistence.rs  state.rs  template.rs  transport.rs
simulator/src/tcp/protocols/: custom.rs  modbus.rs  scene_loader.rs
simulator/src/web/: mod.rs  mqtt_api.rs  response.rs  tcp_api.rs
simulator/web/: package.json  tsconfig.json  vite.config.ts
simulator/web/src/api/: index.ts  mqtt.ts  simulator.ts
simulator/web/src/components/mqtt/: MqttSimulatorDetail.vue  MqttSimulatorList.vue
simulator/web/src/components/simulator/: CreateSimulatorDialog.vue  ModbusRegisterTable.vue  ModbusSimulatorPanel.vue  PacketMonitorPanel.vue  TemplateManagerDialog.vue
simulator/web/src/router/: index.ts
simulator/web/src/stores/: simulator.ts  theme.ts
simulator/web/src/styles/: global.scss
simulator/web/src/views/: MqttSimulatorDetail.vue
(+169 files in other folders)
