[package]
name = "dm-rust"
version = "1.0.0"
edition = "2021"
authors = ["Device Control Team"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# Swagger/OpenAPI 文档支持（仅开发环境使用）
swagger = []

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
# Web框架
axum = { version = "0.6", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors", "trace"] }
# WebSocket支持
tokio-tungstenite = "0.20"
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# 十六进制编解码
hex = "0.4"
# 配置管理
config = "0.14"
# 命令行参数解析
clap = { version = "4.4", features = ["derive"] }
# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 错误处理
anyhow = "1.0"
thiserror = "1.0"
# 串口通信
tokio-serial = "5.4"
# TCP/网络
futures = "0.3"
# 文件流
tokio-util = { version = "0.7", features = ["io"] }
# Modbus协议
tokio-modbus = "0.17"
# 异步channel
async-channel = "1.9"
# 时间处理
chrono = { version = "0.4", features = ["serde"] }
# UUID生成
uuid = { version = "1.6", features = ["v4", "serde"] }
# 并发集合
dashmap = "5.5"
# Wake-on-LAN
wake-on-lan = "0.2"
# 正则表达式
regex = "1.10"
# 网络工具
mac_address = "1.1"
# Async trait支持
async-trait = "0.1"
# Base64 编码
base64 = "0.21"
# 随机数生成
rand = "0.8"
# MySQL 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
# Swagger/OpenAPI (使用兼容 axum 0.6 的版本)
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4", features = ["axum"] }
crc16 = "0.4.0"
# MQTT Broker 和 Client
rumqttd = "0.19"
rumqttc = "0.24"

[target.'cfg(windows)'.dependencies]
# Windows 服务支持
windows-service = "0.6"

[dev-dependencies]
mockall = "0.12"
